more classes now available everywhere, equals/hashCode/toString implementations for custom classes, add "imported" objects concept, convert new tree generators to custom classes, unit tests are *probably* broken.